k8s/test-echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-echo
  namespace: senaev-com
  labels:
    app: test-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-echo
  template:
    metadata:
      labels:
        app: test-echo
    spec:
      containers:
        - name: test-echo
          image: hashicorp/http-echo:0.2.3
          args:
            - -listen=:80
            - -text=Hello World from Traefik (TLS ok)\n
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test-echo
  namespace: senaev-com
spec:
  selector:
    app: test-echo
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
